# rust-studies

./: README.md
rust_txt_project/log_txt_c/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  log_txt_c.h  log_txt_c.py  my_header.h  python_wrapper.py  pythonctypes.py  test_log_txt_c.c
rust_txt_project/log_txt_c/.cargo/: config
rust_txt_project/log_txt_c/src/: lib.rs
rust_txt_project/log_txt_py/: Cargo.toml  README.md  pyproject.toml
rust_txt_project/log_txt_py/.env/: pyvenv.cfg
rust_txt_project/log_txt_py/src/: lib.rs
rust_txt_project/rust_txt_core/: Cargo.toml
rust_txt_project/rust_txt_core/src/: lib.rs
