[package]
name = "log_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "log_file"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
chrono = "0.4.24"
rust_txt_core = { path = "../rust_txt_core" }
